--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 	<body>
 		<header>
 	<pre class="ascii name">
-		| |     |_ _| | \ | | | | | | \ \/ /
-		| |      | |  |  \| | | | | |  \  /
-		| |___   | |  | |\  | | |_| |  /  \
-		|_____| |___| |_| \_|  \___/  /_/\_\
+ | |     |_ _| | \ | | | | | | \ \/ /
+ | |      | |  |  \| | | | | |  \  /
+ | |___   | |  | |\  | | |_| |  /  \
+ |_____| |___| |_| \_|  \___/  /_/\_\
+                    Security Team.
 	</pre>
 </header>
 		<nav>
