--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 </header>
 		<nav>
 	<ul>
-		<li><a href="/">Index</a></li>&nbsp;&nbsp;|
-		<li><a href="/acknowledgement">Acknowledgement</a></li>&nbsp;&nbsp;|
-		<li><a href="/archives">Archives</a></li>&nbsp;&nbsp;|
-		<li><a href="http://github.com/symbo1" target="_blank">Projects</a></li>&nbsp;&nbsp;|
-		<li><a href="/members">Members</a></li>&nbsp;&nbsp;|
-		<li><a href="/about">About</a></li>
+		<li><a href="/">Home</a></li>&nbsp;&nbsp;|
+		<li><a href="acknowledgement">Acknowledgement</a></li>&nbsp;&nbsp;|
+		<li><a href="archives">Archives</a></li>&nbsp;&nbsp;|
+		<li><a href="https://github.com/bingyublog" target="_blank">Projects</a></li>&nbsp;&nbsp;|
+		<li><a href="members">Members</a></li>&nbsp;&nbsp;|
+		<li><a href="about">About</a></li>
 	</ul>
 </nav>
 
