--- a/archives.html
+++ b/archives.html
@@ -3,9 +3,9 @@
 	<meta charset="UTF-8">
 <!-- <link rel="icon" type="image/x-icon" href="/statics/img/favicon.ico"> -->
 <title>
-	
+
 		Archives -
-	
+
 	Symbo1
 </title>
 
@@ -14,19 +14,19 @@
 <meta name="keywords" content="">
 <meta name="author" content="Tr3jer_CongRong.">
 <link rel="alternate" type="application/rss+xml" title="Symbo1's RSS Feed" href="/feed.xml">
-<link rel="stylesheet" type="text/css" href="/statics/css/style.css">
+<link rel="stylesheet" type="text/css" href="./statics/css/style.css">
 
 
 
 	<body>
 		<header>
 	<pre class="ascii name">
-  ____                        _               _ 
+  ____                        _               _
  / ___|   _   _   _ __ ___   | |__     ___   / |
  \___ \  | | | | | '_ ` _ \  | '_ \   / _ \  | |
   ___) | | |_| | | | | | | | | |_) | | (_) | | |
  |____/   \__, | |_| |_| |_| |_.__/   \___/  |_|
-          |___/                                 
+          |___/
           	Security Team.
 	</pre>
 </header>
@@ -89,7 +89,7 @@
 
 </ul>
 		</main>
-		
+
 		<div style="display: none;">
         	<script src="https://s5.cnzz.com/z_stat.php?id=1275488238&web_id=1275488238" language="JavaScript"></script>
     	</div>
