--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<li><a href="acknowledgement">Acknowledgement</a></li>&nbsp;&nbsp;|
 		<li><a href="archives">Archives</a></li>&nbsp;&nbsp;|
 		<li><a href="https://github.com/bingyublog" target="_blank">Projects</a></li>&nbsp;&nbsp;|
-		<li><a href="members">Members</a></li>&nbsp;&nbsp;|
+		<li><a href="members/members.html">Members</a></li>&nbsp;&nbsp;|
 		<li><a href="about">About</a></li>
 	</ul>
 </nav>
