--- a/members.html
+++ b/members.html
@@ -1,101 +1,6 @@
-<!DOCTYPE html><html><head>
-<style>
-@import url("https://fonts.googleapis.com/css?family=Muli");
-* {
-    box-sizing: border-box;
-    font-family: 'Muli', sans-serif;
-}
-body {
-    background: url("./11.jpg");
-    background-size: cover;
-}
-#container {
-    width: auto;
-    height: auto;
-    margin-top: 120px;
-    perspective: 800px;
-    text-align: center;
-}
-#container h1 {
-    color: #ECF6CE;
-    margin-bottom: 30px;
-}
-#container > hr {
-    border: none;
-    border: 1px solid #fff;
-    width: 80%;
-}
-.card {
-    background-size: cover;
-    margin: 10px;
-    display: inline-block;
-    position: relative;
-    width: 220px;
-    height: 260px;
-    opacity: 0.85;
-}
-.front,
-.back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
-    transition: transform 300ms;
-    transition-timing-function: linear;
-    border-radius: 5px;
-}
-.front {
-    tranform: rotateY(0deg);
-    background: linear-gradient(to bottom right, #000000, #000000);
-    text-align: center;
-    padding: 30px;
-}
-.back {
-    background: linear-gradient(to bottom right, #6495ED, #6495ED);
-    transform: rotateY(180deg);
-    padding: 40px 15px;
-    color: #fff;
-}
-.card:hover .front {
-    transform: rotateY(-180deg);
-}
-.card:hover .back {
-    transform: rotateY(0deg);
-}
-.front .contact {
-    height: 120px;
-    width: 120px;
-    border: 5px solid #FFF;
-    border-radius: 50%;
-    display: inline-block;
-    margin-bottom: 10px;
-}
-.front .name {
-    display: inline-block;
-    font-size: 18px;
-    color: #fff;
-}
-.front .job {
-    color: #fff;
-}
-.front hr {
-    border: none;
-    color: #B2DBBF;
-    border: 1px solid;
-}
-.back .icon {
-    fill: currentColor;
-    color: inherit;
-    height: 33px;
-    width: 33px;
-    margin-top: 15px;
-    color: white;
-}
-.back .icon:hover {
-    cursor: pointer;
-    color: #648767;
-}
-</style>
+<!DOCTYPE html><html>
+<head>
+<link rel="stylesheet" type="text/css" href="statics/css/style.css">
 </head>
 <body>
 <script type="text/javascript" src="http://wow.techbrood.com/libs/jquery/jquery-2.1.1.min.js"></script><div id='container'>
