--- a/members.html
+++ b/members.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
 <head>
-<link rel="stylesheet" type="text/css" href="statics/css/style.css">
+<link rel="stylesheet" type="text/css" href="../statics/css/style.css">
 </head>
 <body>
 <script type="text/javascript" src="http://wow.techbrood.com/libs/jquery/jquery-2.1.1.min.js"></script><div id='container'>
