--- a/acknowledgement/index.html
+++ b/acknowledgement/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="">
 	<meta charset="UTF-8">
-<!-- <link rel="icon" type="image/x-icon" href="/statics/img/favicon.ico"> -->
+ <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
 <title>
-	
+
 		Acknowledgement -
-	
+
 	Symbo1
 </title>
 
@@ -14,19 +14,19 @@
 <meta name="keywords" content="">
 <meta name="author" content="Tr3jer_CongRong.">
 <link rel="alternate" type="application/rss+xml" title="Symbo1's RSS Feed" href="/feed.xml">
-<link rel="stylesheet" type="text/css" href="/statics/css/style.css">
+<link rel="stylesheet" type="text/css" href="../statics/css/style.css">
 
 
 
 	<body>
 		<header>
 	<pre class="ascii name">
-  ____                        _               _ 
+  ____                        _               _
  / ___|   _   _   _ __ ___   | |__     ___   / |
  \___ \  | | | | | '_ ` _ \  | '_ \   / _ \  | |
   ___) | | |_| | | | | | | | | |_) | | (_) | | |
  |____/   \__, | |_| |_| |_| |_.__/   \___/  |_|
-          |___/                                 
+          |___/
           	Security Team.
 	</pre>
 </header>
@@ -145,7 +145,7 @@
 			for(var key in currentValue){
 				if(key === ''){showHtml += "<td></td>";continue;}
 				if(cursorNum + index === cursorNum + 5){showHtml += "</tr><tr>"}
-				showHtml += "<td><img src='" + 
+				showHtml += "<td><img src='" +
 				currentValue[key] + "'><br><center>" + key + "</center></td>";
 			}
 		});
@@ -178,7 +178,7 @@
 
 </div>
 		</main>
-		
+
 		<div style="display: none;">
         	<script src="https://s5.cnzz.com/z_stat.php?id=1275488238&web_id=1275488238" language="JavaScript"></script>
     	</div>
