--- a/archives.html
+++ b/archives.html
@@ -34,7 +34,7 @@
 	<ul>
 		<li><a href="/">Index</a></li>&nbsp;&nbsp;|
 		<li><a href="acknowledgement">Acknowledgement</a></li>&nbsp;&nbsp;|
-		<li><a href="archives">Archives</a></li>&nbsp;&nbsp;|
+  	<li><a href="archives">Archives</a></li>&nbsp;&nbsp;|
 		<li><a href="http://github.com/symbo1" target="_blank">Projects</a></li>&nbsp;&nbsp;|
 		<li><a href="members">Members</a></li>&nbsp;&nbsp;|
 		<li><a href="about">About</a></li>
@@ -48,6 +48,7 @@
 	}
 	.artList{
 		margin: 5px;
+		font-size: 14px;
 	}
 </style>
 
